# rust-nerual-net

./: Cargo.toml
data/: 2x2_lines_binary.csv  3x3_lines_smooth.csv
src/: data.rs  initializer.rs  layer.rs  main.rs  net.rs  stats.rs  utils.rs
src/buffer/: mod.rs  row.rs  weight.rs
src/func/: activation.rs  completion.rs  error.rs  learningrate.rs  minibatch.rs  mod.rs
src/train/: buffers.rs  context.rs  error.rs  executor.rs  mod.rs  optimizer.rs  task.rs  trainer.rs
src/train/backprop/: mod.rs  multithreaded.rs  singlethreaded.rs
tools/rpxc/: .gitignore  Dockerfile  init.sh  rpxc-cargo.sh
